--- a/Doc/Two_Wheel_doc.tex
+++ b/Doc/Two_Wheel_doc.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, 7px]{article}
 \usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage{hyperref}
 \usepackage[a4paper,landscape, margin=2mm]{geometry}
 \usepackage{tikz}
 \usetikzlibrary{positioning}
@@ -409,4 +410,11 @@ $$\tau = (T^+)^T \, \gamma$$
 %\section{Simplified Controller}
 
 
+\section{ROS}
+
+\subsection{Simulation}
+
+\subsubsection{Controller}
+The interface between Gazebo and ROS is enstablished via the \href{https://github.com/ros-controls/ros2_control}{ros controls} 
+and \href{https://github.com/ros-controls/gazebo_ros2_control}{gazebo ros2 control}
 \end{document}
